--- a/src/components/BookingPage/Passengers/Passengers.module.css
+++ b/src/components/BookingPage/Passengers/Passengers.module.css
@@ -22,11 +22,13 @@
 }
 
 .head3 {
-  margin: 0 0 30px 0; /* 0 top, 30px bottom, 0 left/right */
-  padding: 0;
+  margin: 0 0 30px 0;
   position: relative;
   width: 100%;
   text-align: center;
+  color: white;
+  font-weight: bolder;
+  font-size: large;
 }
 
 /* Scrollbar styling */
