--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-body{
-    background: black;
-    display: flex;
-    flex-direction: column;
-
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
